--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-sdk-js",
+  "name": "@umany/service-sdk-js",
   "version": "1.0.0",
   "description": "",
   "main": "./src/main.js",
