--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/umany-global/service-sdk-js#readme",
   "dependencies": {
+    "@umany/auth-sdk-js": "^1.0.0",
+    "@umany/error-handler-node": "^1.0.0",
     "axios": "^0.21.4",
-    "browserfy": "^1.0.0",
-    "@umany/error-handler-node": "file:../error-handler-node"
+    "browserfy": "^1.0.0"
   }
 }
