--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/umany-global/service-sdk-js#readme",
   "dependencies": {
-    "@umany/auth-sdk-js": "^1.0.0",
     "@umany/error-handler-node": "^1.0.0",
-    "axios": "^0.21.4",
-    "browserfy": "^1.0.0"
+    "axios": "^0.21.4"
+  },
+  "devDependencies": {
+    "@webpack-cli/generators": "^2.4.2",
+    "dotenv-webpack": "^7.1.0",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   }
 }
