--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umany/service-sdk-js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./src/main.js",
   "scripts": {
@@ -21,9 +21,6 @@
     "axios": "^0.21.4"
   },
   "devDependencies": {
-    "@webpack-cli/generators": "^2.4.2",
-    "dotenv-webpack": "^7.1.0",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2"
+    "@webpack-cli/generators": "^2.4.2"
   }
 }
