--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umany/service-sdk-js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "./src/main.js",
   "scripts": {
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/umany-global/service-sdk-js#readme",
   "dependencies": {
+    "@umany/base-exceptions-js": "^1.0.5",
     "@umany/http-exceptions-js": "^1.0.5",
     "axios": "^0.21.4"
-  },
-  "devDependencies": {}
+  }
 }
