--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 .env
 node_modules
 
-.yarn/*
+.yarn
 yarn-error.log
-!.yarn/cache
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+
+.pnp.cjs
+.pnp.loader.mjs
