--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@umany/rest-client-js",
+  "name": "@umany-global/rest-client-js",
   "version": "1.3.1",
   "description": "",
   "type": "module",
